--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
     <main class="main-container">
       <section>
         <h1> The Lorem Micro Blog</h1>
-          <p>By Foo Bar</p>
+        <p>By Foo Bar</p>
       </section>
     </main>
+    <aside>
+      <p>Check out my vertically centerd ad!</p>
+      <div></div>
+    </aside>
   </body>
 </html>
