--- a/index.html
+++ b/index.html
@@ -19,15 +19,27 @@
         </div>
       </nav>
     </header>
-    <main class="main-container">
+      <div class="main-container">
+      <aside>
+        <p>Check out my vertically centerd ad!</p>
+        <div></div>
+      </aside>
+      <div style="float:left;">
       <section>
         <h1> The Lorem Micro Blog</h1>
         <p>By Foo Bar</p>
       </section>
-    </main>
-    <aside>
-      <p>Check out my vertically centerd ad!</p>
-      <div></div>
-    </aside>
+    <section class="flexbox posty-post">
+      <h2>A Most Posty Post</h2>
+    </section>
+    <section class="flexbox posty-post">
+      <h2>Another Posty Post</h2>
+    </section>
+    <section class="flexbox posty-post">
+      <h2>A Posty Post</h2>
+    </section>
+    </div>
+    </div>
+    <footer></footer>
   </body>
 </html>
